# PracticeCpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
callback_function/: callback_bind_class_member_function.cpp  callback_function_example.cpp
chrono_timer/: CMakeLists.txt  chromo_example.cpp  clock.hpp  compare_clock.cpp  timer.hpp
diy/: CMakeLists.txt  binheap.hpp  diy.md  unique_ptr.hpp
diy/dsa/: disjoint_set.hpp  merge_sort.hpp  segment_tree.hpp  segment_tree_2.hpp
diy/test/: test_unique_ptr.cpp
lambda/: lambda_example.cpp
pimpl/: CMakeLists.txt  pimpl_main.cpp  x.cpp  x.h
singleton/: CMakeLists.txt  basic_singleton_example.cpp  basic_singleton_example_v2.cpp  inherit_singleton_example.cpp  inherit_singleton_example_v2.cpp  magic_static_singleton_example.cpp  ref_ret_function_template_ex.cpp  ref_ret_singleton_example.cpp
test/: CMakeLists.txt  test_disjoint_set.cpp  test_segment_tree.cpp  test_sort.cpp  test_unique_ptr.cpp
