add_executable(inherit_singleton_ex inherit_singleton_example.cpp)

add_executable(inherit_singleton_ex_v2 inherit_singleton_example_v2.cpp)

add_executable(basic_singleton_ex basic_singleton_example.cpp)

add_executable(basic_singleton_ex_v2 basic_singleton_example_v2.cpp)

add_executable(magic_static_singleton_ex magic_static_singleton_example.cpp)

add_executable(ref_ret_function_ex ref_ret_singleton_example.cpp)

add_executable(ref_ret_function_template_ex ref_ret_function_template_ex.cpp)
